fixed a bug where the bullets get stuck

--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ body{
 .cell{
     width: 5%;
     height: 5%;
+    position: relative;
 }
 .starship{
     background-image: url("../media/spaceship.png");
